modif css pour le header background

--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
+header {
+    background-color: black;
+    background-image: url("/home/ingrid/Wild -Code-School/Astronomy-Projet/Image-galerie/pexels-frank-cone-4555142.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-origin: content-box;
+
+}
 ul.nav-menu{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     color: red;
     font-weight: 200;
+    padding: 20px;
 }
+
+
+
+
+
+
+
