--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 header {
+    padding-bottom: 100px;
     background-color: black;
     background-image: url("/home/ingrid/Wild -Code-School/Astronomy-Projet/Image-galerie/pexels-frank-cone-4555142.jpg");
     background-repeat: no-repeat;
@@ -6,6 +7,9 @@ header {
     background-origin: content-box;
 
 }
+
+header h1 {color: yellow;}
+
 ul.nav-menu{
     display: flex;
     flex-direction: row;
