--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 header {
+    padding-top:1px;
     padding-bottom: 100px;
     background-color: black;
     background-image: url("/home/ingrid/Wild -Code-School/Astronomy-Projet/Image-galerie/pexels-frank-cone-4555142.jpg");
@@ -18,6 +19,7 @@ ul.nav-menu{
     font-weight: 200;
     padding: 20px;
 }
+
 
 
 
