--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header {
     background-color: black;
     background-image: url("/home/ingrid/Wild -Code-School/Astronomy-Projet/Image-galerie/pexels-frank-cone-4555142.jpg");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 1920px 300px;
     background-origin: content-box;
 
 }
