--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
 header h1 {color: yellow;}
 
 ul.nav-menu{
+    list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
