--- a/obs-style.css
+++ b/obs-style.css
@@ -1,14 +1,38 @@
-article.obs{
-    position: absolute;
-    left: 15%;
+header {
+    padding-top:1px;
+    padding-bottom: 100px;
+    background-color: black;
+    background-image: url("/home/ingrid/Wild -Code-School/Astronomy-Projet/Image-galerie/pexels-frank-cone-4555142.jpg");
+    background-repeat: no-repeat;
+    background-size: 1920px 300px;
+    background-origin: content-box;
 
-}
+    }
+
+header h1 {color: yellow;}
+
+ul.nav-menu{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #FFFFFF;
+    font-weight: 300;
+    padding: 20px;
+    }
+
+article.obs{
+    display: flex;
+    justify-content: center;
+    }
+
 h1{
     color:red;
     font-size: 40px;
-}
+    }
 
 .contenu {
+
     padding: 10px;
     text-align: center;
     max-width: 80%;
@@ -18,11 +42,16 @@ h1{
     align-items: right; 
     background-color: rgb(49, 47, 47);
     
-}
+    }
 
 h2{color:white;}
   
 p.texte {
     padding-bottom: 50px;
     color: white;
-}
+    }
+
+footer {
+    background-color:#000000;
+    color: red;
+    }
