--- a/observation/obs-style.css
+++ b/observation/obs-style.css
@@ -29,10 +29,10 @@ article.obs{
 h1{
     color:red;
     font-size: 40px;
+    text-align:center;
     }
 
 .contenu {
-
     padding: 10px;
     text-align: center;
     max-width: 80%;
@@ -40,8 +40,7 @@ h1{
     flex-direction: column;
     justify-content: space-around;
     align-items: right; 
-    background-color: rgb(49, 47, 47);
-    
+    background-color: rgb(49, 47, 47);   
     }
 
 h2{color:white;}
