--- a/news.css
+++ b/news.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-image: url("https://www.lemonde.fr/blog/autourduciel/wp-content/uploads/sites/37/2018/09/20180910-Reflets-lac-des-Pises-2000.jpg");
+    background-image: url("https://www.tntv.pf/tntv/wp-content/uploads/2020/03/milky-way-2675322_1280-696x392.jpg");
     color:white
 }
 
