--- a/news.css
+++ b/news.css
@@ -4,7 +4,37 @@ body{
     background-image: url("https://www.tntv.pf/tntv/wp-content/uploads/2020/03/milky-way-2675322_1280-696x392.jpg");
     color:white
 }
+header {
+    padding-top:1px;
+    padding-bottom: 100px;
+   
+    background-image: url("https://www.tntv.pf/tntv/wp-content/uploads/2020/03/milky-way-2675322_1280-696x392.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-origin: content-box;
+    
+}
+li{
+    font-size: 25px;
+}
 
+header h1 {color: yellow;}
+
+ul.nav-menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color:Yellow;
+    font-weight: 200;
+    padding: 20px;
+    background-image: url("https://www.tntv.pf/tntv/wp-content/uploads/2020/03/milky-way-2675322_1280-696x392.jpg");
+    list-style: none;
+}
+#galaxy{
+    height: 500px;
+    width: 100%;
+ 
+}
 
 h1 {
 
@@ -16,7 +46,9 @@ h1 {
     width:23%;
     height: 1100px;
 }
-
+.titre{
+    font-size: 40px;
+}
 h2{
     color: white;
     text-align: center;
@@ -41,4 +73,91 @@ h2{
     color: white;
  
    
+}
+.footer{
+display: flex;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: #2F2F2F
+;
+  background-color:black;
+  border-top: 1px solid black;
+;
+}
+.footer > * {
+  flex:  1 100%;
+}.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+}.footer__logo {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  text-transform: lowercase;
+  font-size: 1.5rem;
+}.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 15px;
+  font-weight: 400;
+}.nav__title {
+  font-weight: 400;
+  font-size: 15px;
+}.footer address {
+  font-style: normal;
+  color: #777;
+}.footer__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  max-width: max-content;
+  background-color: rgb(33, 33, 33, 0.07);
+  border-radius: 100px;
+  color: #2F2F2F
+;
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+}.footer ul {
+  list-style: none;
+  padding-left: 0;
+}.footer li {
+  line-height: 2em;
+}.footer a {
+  text-decoration: none;
+}.footer__nav {
+  display: flex;
+  flex-flow: row wrap;
+}.footer__nav > * {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}.nav__ul a {
+  color: #999;
+}.nav__ul--extra {
+  column-count: 2;
+  column-gap: 1.25em;
+}.legal {
+  display: flex;
+  flex-wrap: wrap;
+  color: #999;
+}.legal__links {
+  display: flex;
+  align-items: center;
+}.heart {
+  color: #2F2F2F
+;
+}@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
+  }
+}@media screen and (min-width: 40.375em) {
+  .footer__nav > * {
+    flex: 1;
+  }  .nav__item--extra {
+    flex-grow: 2;
+  }  .footer__addr {
+    flex: 1 0px;
+  }  .footer__nav {
+    flex: 2 0px;
+  }
 }
