--- a/sylesheet.css
+++ b/sylesheet.css
@@ -1,54 +1,19 @@
 body {
     margin:2px 5px 2em 0;
+    background-color: blue ;
 }
 
-section {
-    display:flex;
-    justify-content: center;
-
+main {
+    background-color:white;
+    margin: 200px;
+    text-align: left;
 }
 
-.img-apollo {
+img {
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-}
-
-.img-Odyssey-de-lespace {
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-}
-
-.img-Etoffe-des-héros {
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-}
-
-.img-gravity {
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-}
-
-.img-interstellar {
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    height: 90%;
+    width: 20%;
+    height: 80%;
     display: flex;
     justify-content: center;
 }
@@ -56,4 +21,12 @@ section {
 h1 {
     text-align:center;
     font-size:40px;
+}
+
+main a.bouton {
+    text-align: center;
+    border: 3px solid black;
+    padding: 10px 20px;
+    flex-wrap: wrap;
+    
 }
